<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.auth.AuthActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_launcher_foreground"
        android:backgroundTint="@color/text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/appName"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/appLogo"
        app:layout_constraintLeft_toRightOf="@id/appLogo"
        app:layout_constraintBottom_toBottomOf="@id/appLogo"
        android:layout_marginStart="10dp"
        android:textStyle="bold|italic"
        android:textSize="40sp"
        android:textColor="@color/text"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="30dp"
        android:layout_height="@dimen/dividerHeight"
        android:background="@color/divider"
        app:layout_constraintLeft_toLeftOf="@id/appLogo"
        app:layout_constraintRight_toRightOf="@id/appName"
        app:layout_constraintTop_toBottomOf="@id/appLogo"
        app:layout_constraintBottom_toTopOf="@id/authorization"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/authorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization"
        app:layout_constraintLeft_toLeftOf="@id/appLogo"
        app:layout_constraintRight_toRightOf="@id/appName"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:layout_marginTop="10dp"
        android:textColor="@color/text"
        app:layout_constraintBottom_toTopOf="@id/inputs"
        android:layout_marginBottom="25dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorization"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeAuthType"
        >

        <EditText
            android:id="@+id/inputCode"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/inputPersonalCode"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/inputLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputCode"
            android:hint="@string/inputLogin"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLogin"
            android:hint="@string/inputPassword"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputs"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/accent"
        android:textColor="@color/white"
        app:rippleColor="@color/white"
        app:cornerRadius="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <Button
        android:id="@+id/btnChangeAuthType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dividerOrText"
        android:layout_marginBottom="15dp"
        android:text="@string/registration"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/mark_5"
        android:textColor="@color/white"
        app:rippleColor="@color/white"
        />

    <View
        android:id="@+id/dividerOrStart"
        android:layout_width="0dp"
        android:layout_height="@dimen/dividerHeight"
        android:background="@color/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnVK"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toLeftOf="@id/dividerOrText"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <TextView
        android:id="@+id/dividerOrText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orSignInWith"
        android:textColor="@color/text"
        app:layout_constraintLeft_toRightOf="@id/dividerOrStart"
        app:layout_constraintTop_toTopOf="@id/dividerOrStart"
        app:layout_constraintRight_toLeftOf="@id/dividerOrEnd"
        app:layout_constraintBottom_toBottomOf="@id/dividerOrEnd"
        />

    <View
        android:id="@+id/dividerOrEnd"
        android:layout_width="0dp"
        android:layout_height="@dimen/dividerHeight"
        android:background="@color/divider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnVK"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toRightOf="@id/dividerOrText"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <ImageView
        android:id="@+id/btnVK"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_vk_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>