<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.required_update.RequiredUpdateActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_launcher_foreground"
            android:backgroundTint="@color/text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/headText"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/headText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/comeToUpdate"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/subhead"/>

        <TextView
            android:id="@+id/subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headText"
            android:text="@string/thisUpdateIsRequired"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/whatsNewHead"/>

        <TextView
            android:id="@+id/whatsNewHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whatsNew"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subhead"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/whatsNewDescription"
            tools:background="@color/accentDarken2"
            />

        <TextView
            android:id="@+id/whatsNewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_secondary"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/whatsNewHead"
            tools:text="Это очень важное обновление бла-бла"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@id/btnDownload"/>

        <Button
            android:id="@+id/btnDownload"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/downloadUpdate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>