<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@color/background_bottom_sheet"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/ic_launcher_foreground"
            android:backgroundTint="@color/text_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comeToUpdate"
            android:textColor="@color/text"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintLeft_toLeftOf="@+id/logo"
            app:layout_constraintRight_toRightOf="@+id/logo"
            android:layout_marginTop="15dp"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="1.0.0 • 12.12.2022"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/head"
            />

        <TextView
            android:id="@+id/whatsNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/details"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/whatsNew"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/whatsNew"
            tools:text="В этом обновлении мы бла-бла-бла-бла, а также бла-бла-бла бла"
            android:textColor="@color/text_secondary"
            android:clickable="true"
            />

        <Button
            android:id="@+id/btnPostponed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notNow"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintRight_toLeftOf="@id/btnDownload"
            android:backgroundTint="@color/button_cancel_foreground"
            android:textColor="@color/button_cancel_background"
            app:rippleColor="@color/button_cancel_background"/>

        <Button
            android:id="@+id/btnDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="5dp"
            android:text="@string/download"
            app:layout_constraintTop_toBottomOf="@+id/description"
            android:layout_marginTop="17dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btnPostponed"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/accent"
            android:textColor="@color/white"
            app:rippleColor="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>