<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.schedule.ScheduleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background_bottom_nav"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnOpenCalendar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/button_pick_date_background"
            tools:text="29.09.22"
            android:textColor="@color/button_pick_date_foreground"
            app:icon="@drawable/ic_calendar"
            app:iconSize="14sp"
            app:iconTint="@color/button_pick_date_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/button_pick_date_foreground" />

        <TextView
            android:id="@+id/toolbarSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="Среда, сегодня"
            android:textColor="@color/text_secondary"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnOpenCalendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/schedule"
            android:textColor="@color/text"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/toolbarSubtitle"
            app:layout_constraintEnd_toStartOf="@+id/btnOpenCalendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavButtons"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholderIcon"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:srcCompat="@drawable/calendar3d"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/placeholderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/weekendTitle"
            android:textColor="@color/text"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/placeholderIcon"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"/>

        <TextView
            android:id="@+id/placeholderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/weekendDescription"
            android:textColor="@color/text_secondary"
            app:layout_constraintTop_toBottomOf="@+id/placeholderTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scheduleList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/bottomNavButtons"
        tools:itemCount="3"
        tools:listitem="@layout/schedule_list_item"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_bottom_nav"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnDayPrevious"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/button_schedule_nav_background"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="День назад"
            android:textColor="@color/button_schedule_nav_foreground"
            app:icon="@drawable/ic_chevron_left"
            app:iconGravity="textStart"
            app:iconTint="@color/button_schedule_nav_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDayNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/button_schedule_nav_foreground" />

        <Button
            android:id="@+id/btnDayNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/button_schedule_nav_background"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="День вперёд"
            android:textColor="@color/button_schedule_nav_foreground"
            app:icon="@drawable/ic_chevron_right"
            app:iconGravity="textEnd"
            app:iconTint="@color/button_schedule_nav_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnDayPrevious"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/button_schedule_nav_foreground" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>